Exercise 2.07: Stateful applications
- Database via stateful deployment to store pingpong counter
- Optimized launch_project.sh
  - Images are tarballed and send to k3d only if those are changed
  - Use labels when referring to resources to simplify the script
  - Automatically delete the existing pod if re-depoying existing
    resource

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,4 +16,7 @@
         "global-values.yaml"
     ],
     "yaml.format.bracketSpacing": false,
+    "files.associations": {
+        //"*.yaml": "yaml"
+    }
 }
