--- a/project/jobs/picturefetcher/manifests/templates/cronJob.yaml
+++ b/project/jobs/picturefetcher/manifests/templates/cronJob.yaml
@@ -9,6 +9,9 @@ spec:
   jobTemplate:
     spec:
       template:
+        metadata:
+          labels:
+            job: {{index .containerNames 0}}
         spec:
           restartPolicy: OnFailure
           containers:
