--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,8 @@
         "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
         "source=/home/${localEnv:USER}/.ssh,target=/home/devroot/.ssh,type=bind",
         "source=/home/${localEnv:USER}/.age,target=/home/devroot/.age,type=bind",
-        "source=/home/${localEnv:USER}/.bash_history,target=/home/devroot/.bash_history,type=bind"
+        "source=/home/${localEnv:USER}/.bash_history,target=/home/devroot/.bash_history,type=bind",
+        "source=/home/${localEnv:USER}/.devopswithkubernetes-kube,target=/home/devroot/.kube,type=bind"
     ],
     "updateRemoteUserUID": false,
     "remoteUser": "devroot",
