--- a/project/apps/backend/Dockerfile
+++ b/project/apps/backend/Dockerfile
@@ -1,5 +1,10 @@
-FROM python:3.11-slim AS backend
+FROM python:3.11 AS backend
 
-FROM python:3.11-slim AS backend-debug
+WORKDIR /tmp
+
+COPY requirements.txt requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+FROM backend AS backend-debug
 
 RUN pip install --no-cache-dir debugpy==1.8.6
