--- a/project/apps/backend/manifests/values.yaml
+++ b/project/apps/backend/manifests/values.yaml
@@ -6,7 +6,13 @@ serviceName: backend-svc
 ingressClassName: backend-ingress-class
 clusterPort: 1015
 appPort: 3015
+dbTableName: todos
 dependencyValues:
   jobs:
     picturefetcher:
       - randomPictureFileName
+  apps:
+    postgres:
+      - serviceName
+      - appPort
+      - containerNames
