--- a/project/jobs/picturefetcher/manifests/templates/cronJob.yaml
+++ b/project/jobs/picturefetcher/manifests/templates/cronJob.yaml
@@ -41,7 +41,5 @@ spec:
             - name: {{.tempStartupScriptVolumeName}}
               configMap:
                 name: {{index .containerNames 0}}
-                items:
-                  - key: {{index .containerNames 0}}
-                    path: {{index .containerNames 0}}
+                defaultMode: 0755
 {{- end}}
