--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,10 @@ report.html
 .vscode/settings.json
 configMap.yaml
 secret.yaml
+project-other/apps/logserver/requirements.txt
+project-other/apps/pingpong/requirements.txt
+project-other/apps/pingpong/script_templates/dbhandler.py
+project/apps/backend/requirements.txt
+project/apps/backend/script_templates/dbhandler.py
+project/apps/postgres/.env
+project/apps/postgres/Dockerfile
