--- a/project-other/apps/logserver/Dockerfile
+++ b/project-other/apps/logserver/Dockerfile
@@ -2,9 +2,7 @@ FROM python:3.11-slim AS logserver
 
 FROM python:3.11-slim AS printer
 
-RUN pip --no-cache-dir install \
-    certifi==2024.8.30 \
-    charset-normalizer==3.3.2 \
-    idna==3.10 \
-    requests==2.32.3 \
-    urllib3==2.2.3
+WORKDIR /tmp
+
+COPY requirements.txt requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
