--- a/project-other/apps/logserver/manifests/templates/deployment.yaml
+++ b/project-other/apps/logserver/manifests/templates/deployment.yaml
@@ -74,13 +74,5 @@ spec:
         - name: {{.tempStartupScriptVolumeName}}
           configMap:
             name: {{index .containerNames 0}}
-            items:
-              - key: {{index .containerNames 0}}
-                path: {{index .containerNames 0}}
-                mode: 0755
-              - key: {{index .containerNames 1}}
-                path: {{index .containerNames 1}}
-                mode: 0755
-              - key: {{.informationFile}}
-                path: {{.informationFile}}
+            defaultMode: 0755
 {{- end}}
