--- a/project-other/apps/pingpong/manifests/templates/deployment.yaml
+++ b/project-other/apps/pingpong/manifests/templates/deployment.yaml
@@ -46,8 +46,5 @@ spec:
         - name: {{.tempStartupScriptVolumeName}}
           configMap:
             name: {{index .containerNames 0}}
-            items:
-              - key: {{index .containerNames 0}}
-                path: {{index .containerNames 0}}
-                mode: 0755
+            defaultMode: 0755
 {{- end}}
