--- a/project/apps/frontend/manifests/templates/deployment.yaml
+++ b/project/apps/frontend/manifests/templates/deployment.yaml
@@ -44,12 +44,5 @@ spec:
         - name: {{.tempStartupScriptVolumeName}}
           configMap:
             name: {{index .containerNames 0}}
-            items:
-              - key: {{index .containerNames 0}}
-                path: {{index .containerNames 0}}
-                mode: 0755
-              - key: {{.serverIndexFile}}
-                path: {{.serverIndexFile}}
-              - key: {{.fetchTodosScriptFile}}
-                path: {{.fetchTodosScriptFile}}
+            defaultMode: 0755
 {{- end}}
