Exercise 2.09: Daily todos
Create a CronJob that generates a new todo every hour
to remind you to do 'Read < URL >'.

- Improved dependency resolver so that it is possible to
re-use variables from other namespaces
- Removed support for symlink following from sort_apps_tool
- Installed kube-linter and did some security imporvements
- Added kubectl server side dry-running to pre-commit

--- a/.devcontainer/git-hooks/eslint/Dockerfile
+++ b/.devcontainer/git-hooks/eslint/Dockerfile
@@ -1,13 +1,8 @@
-FROM node:alpine3.19
+FROM pipelinecomponents/eslint:amd64-45dabb1
 
 WORKDIR /workspace
-
-# hadolint ignore=DL4006
-RUN npm init -y && \
-    npm pkg set 'name=linter' && \
-    yes | npm init @eslint/config@latest --config eslint-config-standard
 
 ARG WORKSPACE
 COPY $WORKSPACE /workspace
 
-ENTRYPOINT ["npx", "eslint", "--no-config-lookup"]
+ENTRYPOINT ["eslint", "--no-config-lookup"]
