--- a/project/apps/backend/manifests/values.yaml
+++ b/project/apps/backend/manifests/values.yaml
@@ -7,12 +7,14 @@ ingressClassName: backend-ingress-class
 clusterPort: 1015
 appPort: 3015
 dbTableName: todos
-dependencyValues:
-  jobs:
-    picturefetcher:
-      - randomPictureFileName
-  apps:
-    postgres:
-      - serviceName
-      - appPort
-      - containerNames
+depValues:
+  project:
+    initjobs:
+      picturefetcher:
+        - randomPictureFileName
+  project-other:
+    apps:
+      postgres:
+        - serviceName
+        - appPort
+        - containerNames
