--- a/project/apps/postgres/manifests/values.yaml
+++ b/project/apps/postgres/manifests/values.yaml
@@ -1,8 +1,11 @@
 ---
-containerNames:
-  - postgres
-serviceName: postgres-svc
 clusterPort: 1050
-appPort: 5432
-dbMountPath: /var/lib/postgresql/data
-dbVolumeName: postgres-data-storage
+depValuesNoRoute:
+  project-other:
+    apps:
+      postgres:
+        - containerNames
+        - appPort
+        - serviceName
+        - dbMountPath
+        - dbVolumeName
