--- a/project/apps/frontend/manifests/values.yaml
+++ b/project/apps/frontend/manifests/values.yaml
@@ -6,10 +6,11 @@ fetchTodosScriptFile: fetchTodos.js
 serviceName: frontend-svc
 clusterPort: 1010
 appPort: 3010
-dependencyValues:
-  apps:
-    backend:
-      - containerNames
-  jobs:
-    picturefetcher:
-      - randomPictureFileName
+depValues:
+  project:
+    apps:
+      backend:
+        - containerNames
+    initjobs:
+      picturefetcher:
+        - randomPictureFileName
