--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,64 +1,22 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-    "name": "Dev Environment",
-    "build": {
-        "dockerfile": "${localWorkspaceFolder}/Dockerfile",
-        "context": "${localWorkspaceFolder}",
-        "args": {
-            "BASE_IMAGE": "python:3.11.9-bookworm",
-            "HOST_DOCKER_GID": "999",
-            "HOST_UID": "1000",
-            "HOST_GID": "1003",
-            "PACKAGES_DEVENV_FILE": "imagefiles/packages-devenv.txt",
-            "PACKAGES_DEVLINT_FILE": "imagefiles/packages-devlint.txt",
-            "REQUIREMENTS_FILE": "imagefiles/requirements.txt",
-            "REQUIREMENTS_TOOLS_FILE": "imagefiles/requirements-pip-tools.txt",
-            "REQUIREMENTS_DEV_FILE": "imagefiles/requirements-dev.txt",
-            "REPOS_DEVENV_FILE": "imagefiles/repos-devenv.sh",
-            "CONFIGURE_DEVUSER_FILE": "imagefiles/configure-devuser.sh",
-            "DEVUSER": "devroot"
-        }
-    },
-    "workspaceFolder": "/dev-env/${localWorkspaceFolderBasename}",
-    "mounts": [
-        "source=${localWorkspaceFolder},target=/dev-env/${localWorkspaceFolderBasename},type=bind",
-        "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
-        "source=/home/${localEnv:USER}/.ssh,target=/home/devroot/.ssh,type=bind",
-        "source=/home/${localEnv:USER}/.age,target=/home/devroot/.age,type=bind",
-        "source=/home/${localEnv:USER}/.bash_history,target=/home/devroot/.bash_history,type=bind",
-        "source=/home/${localEnv:USER}/.devopswithkubernetes-kube,target=/home/devroot/.kube,type=bind"
-    ],
-    "updateRemoteUserUID": false,
-    "remoteUser": "devroot",
-    "initializeCommand": "${localWorkspaceFolder}/.devcontainer/init/initscript.sh",
-    "containerUser": "devroot",
-    "onCreateCommand": "./.devcontainer/customize-dev-env.sh",
-    "postAttachCommand": "./.devcontainer/postAttach.sh",
-    "customizations": {
-        "notInUseExtensions": [
-            "ms-kubernetes-tools.vscode-kubernetes-tools",
-            "NicolasVuillamy.vscode-groovy-lint",
-            "SonarSource.sonarlint-vscode"
-        ],
-        "vscode": {
-            "extensions": [
-                "charliermarsh.ruff",
-                "christian-kohler.path-intellisense",
-                "codezombiech.gitignore",
-                "eamodio.gitlens",
-                "ms-python.python",
-                "ms-python.vscode-pylance",
-                "timonwong.shellcheck",
-                "exiasr.hadolint",
-                "ms-azuretools.vscode-docker",
-                "redhat.vscode-yaml",
-                "GitHub.copilot",
-                "GitHub.copilot-chat",
-                "ms-kubernetes-tools.vscode-kubernetes-tools",
-                "Tim-Koehler.helm-intellisense"
-            ]
-        }
-    },
-    "runArgs": [
-        "--add-host=host.docker.internal:host-gateway"
-    ]
+	"name": "Python 3",
+	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bookworm"
+
+	// Features to add to the dev container. More info: https://containers.dev/features.
+	// "features": {},
+
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
+
+	// Use 'postCreateCommand' to run commands after the container is created.
+	// "postCreateCommand": "pip3 install --user -r requirements.txt",
+
+	// Configure tool-specific properties.
+	// "customizations": {},
+
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	// "remoteUser": "root"
 }
