--- a/project/volumes/shared-volume/manifests/templates/persistentVolumeClaim.yaml
+++ b/project/volumes/shared-volume/manifests/templates/persistentVolumeClaim.yaml
@@ -1,12 +1,1 @@
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: {{.Values.sharedPersistentVolumeClaimName}}
-spec:
-  storageClassName: {{.Values.storageClassName}}
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Gi
+../../../../../base_templates/templates/persistentVolumeClaim.yaml
