Exercise 3.01: Pingpong GKE & Excercise 3.02
Deploy Ping-pong application into GKE.
In this exercise use a LoadBalancer service to expose the service.

- Start to use GKE artifact registry for docker images

Seems that Excercise 3.02 was also working with this commit.
Applications succesfully accessed via external IPs and Ingress
was routing the requests properly.

--- a/base_templates/templates/service.yaml
+++ b/base_templates/templates/service.yaml
@@ -5,7 +5,7 @@ kind: Service
 metadata:
   name: {{.serviceName}}
 spec:
-  type: ClusterIP
+  type: {{.serviceType}}
   selector:
     app: {{index .containerNames 0}}
   ports:
