--- a/project/apps/backend/manifests/templates/deployment.yaml
+++ b/project/apps/backend/manifests/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: {{index .containerNames 0}}
-          image: "{{index .containerNames 0}}:latest"
+          image: "{{.imageRegistry}}/{{index .containerNames 0}}:latest"
           imagePullPolicy: IfNotPresent
           resources:
             limits:
