--- a/project/apps/frontend/manifests/templates/ingress.yaml
+++ b/project/apps/frontend/manifests/templates/ingress.yaml
@@ -1,19 +1,1 @@
----
-{{- with .Values}}
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: {{index .containerNames 0}}-ingress
-spec:
-  ingressClassName: nginx
-  rules:
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: {{.serviceName}}
-                port:
-                  number: {{.clusterPort}}
-{{- end}}
+../../../../../base_templates/templates/ingress.yaml
