--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,7 @@
         "source=/home/${localEnv:USER}/.age,target=/home/devroot/.age,type=bind",
         "source=/home/${localEnv:USER}/.bash_history,target=/home/devroot/.bash_history,type=bind",
         "source=/home/${localEnv:USER}/.devopswithkubernetes-kube,target=/home/devroot/.kube,type=bind",
+        "source=/home/${localEnv:USER}/.config/devopswithkubernetes-helm,target=/home/devroot/.config/helm,type=bind",
         "source=/home/${localEnv:USER}/.config/gcloud,target=/home/devroot/.config/gcloud,type=bind",
         "source=/home/${localEnv:USER}/.devcontainer-docker,target=/home/devroot/.docker,type=bind"
     ],
