--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -27,8 +27,10 @@ jobs:
       - run: gcloud config set compute/zone europe-north1-b
       - run: gcloud container clusters get-credentials dwk-cluster
       - run: tools/gh-workflows/generate_age_key.sh
+      - run: |- # To avoid errors with git commands
+          git config --global --add safe.directory \
+            /__w/devopswithkubernetes/devopswithkubernetes
       - name: Build-Publish-Deploy
         run: |-
-          git config --global --add safe.directory /__w/devopswithkubernetes/devopswithkubernetes
           tools/gh-workflows/generate_dot_env.sh
           tools/launch_project.sh project-other
