--- a/project-other/apps/logserver/manifests/templates/deployment.yaml
+++ b/project-other/apps/logserver/manifests/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: {{index .containerNames 0}}
           image: "{{.imageRegistry}}/{{index .containerNames 0}}:{{.versionTag}}"
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: {{.imagePullPolicy}}
           resources: &resource_limits
             limits:
               cpu: "1"
@@ -54,7 +54,7 @@ spec:
             runAsNonRoot: true
         - name: {{index .containerNames 1}}
           image: "{{.imageRegistry}}/{{index .containerNames 1}}:{{.versionTag}}"
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: {{.imagePullPolicy}}
           resources: *resource_limits
           command:
             - "/bin/bash"
@@ -66,6 +66,9 @@ spec:
                 configMapKeyRef:
                   name: {{index .containerNames 0}}
                   key: MESSAGE
+          envFrom:
+            - secretRef:
+                name: {{index .apps.postgres.containerNames 0}}
           readinessProbe:
             exec:
               command:
