--- a/project/apps/frontend/manifests/templates/deployment.yaml
+++ b/project/apps/frontend/manifests/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: {{index .containerNames 0}}
           image: "{{.imageRegistry}}/{{index .containerNames 0}}:{{.versionTag}}"
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: {{.imagePullPolicy}}
           resources:
             limits:
               cpu: "1"
