--- a/project/postjobs/todoappender/manifests/templates/cronJob.yaml
+++ b/project/postjobs/todoappender/manifests/templates/cronJob.yaml
@@ -18,7 +18,7 @@ spec:
             - name: {{index .containerNames 0}}
               # yamllint disable-line rule:line-length
               image: "{{.imageRegistry}}/{{index .containerNames 0}}:{{.versionTag}}"
-              imagePullPolicy: IfNotPresent
+              imagePullPolicy: {{.imagePullPolicy}}
               command:
                 - "/bin/bash"
                 - "-c"
