--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,15 +5,33 @@ on:
   push:
 
 jobs:
+  build-container:
+    name: Build container
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - uses: actions/checkout@v4
+      - run: |-
+          tools/gh-workflows/generate_dot_env.sh
+          .devcontainer/init/initscript.sh \
+          jkmetsola/dwk-deploy:${{ github.sha }}
+      - run: |-
+          echo "${{ secrets.DOCKER_TOKEN }}" \
+          | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - run: docker push jkmetsola/dwk-deploy:${{ github.sha }}
+
   build-publish-deploy:
     name: Build, Publish and Deploy
     runs-on: ubuntu-latest
+    needs: build-container
     defaults:
       run:
         shell: bash
 
     container:
-      image: jkmetsola/dwk-deploy:latest
+      image: jkmetsola/dwk-deploy:${{ github.sha }}
       options: --user=root
       env:
         GKE_SA_KEY: ${{ secrets.GKE_SA_KEY }}
