Fixed a bug regarding server restart
- Also started to use subtemplates to avoid redundant template
definitions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "yaml.format.bracketSpacing": false,
     "files.associations": {
         "*.py.symlink": "python",
+        "*.tpl": "helm"
         //"*.yaml": "yaml"
     },
     "diffEditor.renderSideBySide": false,
