--- a/.gitignore
+++ b/.gitignore
@@ -169,10 +169,14 @@ secret.yaml
 project-other/apps/logserver/requirements.txt
 project-other/apps/logserver/script_templates/dbhandler.py
 project-other/apps/logserver/script_templates/pingpong_dbhandler.py
+project-other/apps/logserver/script_templates/tcpserver.py
 project-other/apps/pingpong/requirements.txt
 project-other/apps/pingpong/script_templates/dbhandler.py
+project-other/apps/pingpong/script_templates/tcpserver.py
 project/apps/backend/requirements.txt
 project/apps/backend/script_templates/dbhandler.py
+project/apps/backend/script_templates/tcpserver.py
+project/apps/frontend/script_templates/tcpserver.py
 project/apps/postgres/.env
 project/apps/postgres/Dockerfile
 project/jobs/todoappender/requirements.txt
