--- a/project-other/apps/logserver/manifests/templates/deployment.yaml
+++ b/project-other/apps/logserver/manifests/templates/deployment.yaml
@@ -1,57 +1,17 @@
 ---
 {{- with .Values}}
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{index .containerNames 0}}
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: {{index .containerNames 0}}
-  template:
-    metadata:
-      labels:
-        app: {{index .containerNames 0}}
+{{- template "deployment.spec.base" $}}
     spec:
       containers:
-        - name: {{index .containerNames 0}}
-          image: "{{.imageRegistry}}/{{index .containerNames 0}}:{{.versionTag}}"
-          imagePullPolicy: {{.imagePullPolicy}}
-          resources: &resource_limits
-            limits:
-              cpu: "1"
-              memory: "512Mi"
-            requests:
-              cpu: "100m"
-              memory: "256Mi"
-          command:
-            - "/bin/bash"
-            - "-c"
-            - "{{.tempScriptVolumeMountPath}}/{{index .containerNames 0}}"
+          {{- template "container.base" $}}
           ports:
             - containerPort: {{.appPort}}
-          readinessProbe:
-            httpGet:
-              path: /
-              port: {{.appPort}}
-              httpHeaders:
-                - name: Content-Type
-                  value: text/plain
-            initialDelaySeconds: 5
-            periodSeconds: 10
-          volumeMounts:
+          {{- template "probes.get" $}}
+          {{- template "security.context" $}}
+          {{- template "volumemounts.base" $}}
             - &logfile_mount
               name: {{.logFileVolumeName}}
               mountPath: {{.logFileMountPath}}
-            - &temp_script_mount
-              name: {{.tempStartupScriptVolumeName}}
-              mountPath: {{.tempScriptVolumeMountPath}}
-              readOnly: true
-          securityContext: &security_context
-            readOnlyRootFilesystem: true
-            runAsUser: 1000
-            runAsNonRoot: true
         - name: {{index .containerNames 1}}
           image: "{{.imageRegistry}}/{{index .containerNames 1}}:{{.versionTag}}"
           imagePullPolicy: {{.imagePullPolicy}}
@@ -74,15 +34,11 @@ spec:
               command:
                 - cat
                 - "{{.logFileMountPath}}/{{.logFileName}}"
-          volumeMounts:
+          {{- template "security.context" $}}
+          {{- template "volumemounts.base" $}}
             - *logfile_mount
-            - *temp_script_mount
-          securityContext: *security_context
-      volumes:
+      {{- template "volumes.base" $}}
         - name: {{.logFileVolumeName}}
           emptyDir: {}
-        - name: {{.tempStartupScriptVolumeName}}
-          configMap:
-            name: {{index .containerNames 0}}
-            defaultMode: 0755
+      terminationGracePeriodSeconds: 5
 {{- end}}
