--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,13 +1,16 @@
 ---
-name: Release application
+name: Execute action in container.
 
 on:
+  delete:
   push:
 
 jobs:
   build-container:
     name: Build container
     runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: jkmetsola/dwk-deploy:${{ github.sha }}
     defaults:
       run:
         shell: bash
@@ -15,40 +18,36 @@ jobs:
       - uses: actions/checkout@v4
       - run: |-
           tools/gh-workflows/generate_dot_env.sh
-          .devcontainer/init/initscript.sh \
-          jkmetsola/dwk-deploy:${{ github.sha }}
+          .devcontainer/init/initscript.sh "$IMAGE_TAG"
       - run: |-
           echo "${{ secrets.DOCKER_TOKEN }}" \
           | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      - run: docker push jkmetsola/dwk-deploy:${{ github.sha }}
+      - run: |-
+          docker push "$IMAGE_TAG"
 
-  build-publish-deploy:
-    name: Build, Publish and Deploy
+  deploy-project:
     runs-on: ubuntu-latest
+    name: Deploy a project
     needs: build-container
-    defaults:
-      run:
-        shell: bash
-
+    strategy:
+      matrix:
+        job: [project, project-other]
     container:
       image: jkmetsola/dwk-deploy:${{ github.sha }}
       options: --user=root
       env:
         GKE_SA_KEY: ${{ secrets.GKE_SA_KEY }}
         SOPS_AGE_KEY: ${{ secrets.SOPS_AGE_KEY }}
-
     steps:
       - uses: actions/checkout@v4
-      - run: tools/gh-workflows/authenticate_service_user.sh
-      - run: gcloud --quiet auth configure-docker europe-north1-docker.pkg.dev
-      - run: gcloud config set project dwk-gke-440513
-      - run: gcloud config set compute/zone europe-north1-b
-      - run: gcloud container clusters get-credentials dwk-cluster
-      - run: tools/gh-workflows/generate_age_key.sh
-      - run: |- # To avoid errors with git commands
-          git config --global --add safe.directory \
-            /__w/devopswithkubernetes/devopswithkubernetes
-      - name: Build-Publish-Deploy
-        run: |-
-          tools/gh-workflows/generate_dot_env.sh
-          tools/launch_project.sh project-other
+      - uses: ./.github/actions/configure-env
+      - name: Delete branch namespace
+        if: ${{ github.event_name == 'delete' }}
+        uses: ./.github/actions/delete
+        with:
+          project: ${{ matrix.job }}
+      - name: Deploy branch
+        if: ${{ github.event_name == 'push' }}
+        uses: ./.github/actions/release
+        with:
+          project: ${{ matrix.job }}
