Optimize build cache using
- Due to slow CI performance, cache usage was improved
- Start to use actionlint linter
- Update dependencies

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,10 @@
             "REPOS_DEVENV_FILE": "imagefiles/repos-devenv.sh",
             "CONFIGURE_DEVUSER_FILE": "imagefiles/configure-devuser.sh",
             "DEVUSER": "devroot"
-        }
+        },
+        "options": [
+            "--cache-from=type=registry,ref=jkmetsola/dwk-deploy:buildcache"
+        ]
     },
     "workspaceFolder": "/dev-env/${localWorkspaceFolderBasename}",
     "mounts": [
