--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,29 +1,24 @@
 ---
-name: Execute action in container.
-
 on:
   delete:
   push:
 
 jobs:
   build-container:
-    name: Build container
-    runs-on: ubuntu-latest
-    env:
-      IMAGE_TAG: jkmetsola/dwk-deploy:${{ github.sha }}
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - uses: actions/checkout@v4
-      - run: |-
-          tools/gh-workflows/generate_dot_env.sh
-          .devcontainer/init/initscript.sh "$IMAGE_TAG"
-      - run: |-
-          echo "${{ secrets.DOCKER_TOKEN }}" \
-          | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-      - run: |-
-          docker push "$IMAGE_TAG"
+    uses: ./.github/workflows/build.yaml
+    with:
+      EXPORT_IMAGE_CACHE: false
+    secrets:
+      DOCKER_TOKEN: "${{ secrets.DOCKER_TOKEN }}"
+      DOCKER_USERNAME: "${{ secrets.DOCKER_USERNAME }}"
+
+  build-container-and-export-cache:
+    uses: ./.github/workflows/build.yaml
+    with:
+      EXPORT_IMAGE_CACHE: true
+    secrets:
+      DOCKER_TOKEN: "${{ secrets.DOCKER_TOKEN }}"
+      DOCKER_USERNAME: "${{ secrets.DOCKER_USERNAME }}"
 
   deploy-project:
     runs-on: ubuntu-latest
