fix a bug in branch deletion workflow

--- a/.github/actions/delete/action.yaml
+++ b/.github/actions/delete/action.yaml
@@ -9,6 +9,4 @@ runs:
   using: "composite"
   steps:
     - shell: bash
-      run: |-
-        source .devcontainer/setupEnv.sh
-        kubectl delete ${{ inputs.project }}-"$VERSION_BRANCH"
+      run: tools/gh-workflows/delete_branch_namespace.sh "${{ inputs.project }}"
