Refactor launch_project tool
- Refactored the tool to increase maintainability
- Update requirements
- Remove redundancies (use same files for databases in
different namespaces)
- Fix a bug in resolve helm template error handling

--- a/project-other/apps/logserver/manifests/values.yaml
+++ b/project-other/apps/logserver/manifests/values.yaml
@@ -10,12 +10,13 @@ clusterPort: 1030
 appPort: 3030
 informationFile: information.txt
 depValues:
-  project-other:
+  project-common:
     databases:
       postgres:
         - serviceName
         - appPort
         - containerNames
+  project-other:
     apps:
       pingpong:
         - serviceName
