--- a/project/postjobs/dbbackupper/manifests/values.yaml
+++ b/project/postjobs/dbbackupper/manifests/values.yaml
@@ -2,7 +2,7 @@
 containerNames:
   - dbbackupper
 depValues:
-  project-other:
+  project-common:
     databases:
       postgres:
         - serviceName
