--- a/project/postjobs/todoappender/manifests/values.yaml
+++ b/project/postjobs/todoappender/manifests/values.yaml
@@ -2,7 +2,7 @@
 containerNames:
   - todoappender
 depValues:
-  project-other:
+  project-common:
     databases:
       postgres:
         - serviceName
