Disable workflow for the main branch

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -2,6 +2,8 @@
 on: # yamllint disable-line rule:truthy
   delete:
   push:
+    branches-ignore:
+      - main # disable deployments to main branch for now.
 
 jobs:
   build-container:
