refactor project launch scripts to be simpler
- add prometheus
- update ruff
- decrease cpu resources for pods
- add forwarded ports for dev env

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -65,5 +65,9 @@
     },
     "runArgs": [
         "--add-host=host.docker.internal:host-gateway"
+    ],
+    "forwardPorts": [
+        3000,
+        3001
     ]
 }
