Exercise 4.01: Readiness Probe
By creating initcontainer that checks the
database connection, probes can be properly
used without unnecessary container resets.

Without initcontainer, application would crash
in the case of this project (per design).

--- a/project-other/apps/pingpong/manifests/templates/deployment.yaml
+++ b/project-other/apps/pingpong/manifests/templates/deployment.yaml
@@ -2,6 +2,7 @@
 {{- with .Values}}
 {{- template "deployment.spec.base" $}}
     spec:
+      {{- template "init.container.waitdb" $}}
       containers:
           {{- template "container.base" $}}
           envFrom:
